force-app/main/default/objects/ReportOSElement__c/ReportOSElement__c.object-meta.xml
<CustomObject>
    <label>Report OmniScript Element</label>
    <nameField>
        <label>Report OmniScript Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report OmniScript Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>