force-app/main/default/objects/ReportOSElement__c/fields/HasExtraPayload__c.field-meta.xml
<CustomField>
    <fullName>HasExtraPayload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copy of the Extra Payload property from the Parent propertySet json</description>
    <label>Has Extra Payload</label>
    <type>Checkbox</type>
</CustomField>