force-app/main/default/objects/ReportOSElement__c/fields/HTMLTemplateId__c.field-meta.xml
<CustomField>
    <fullName>HTMLTemplateId__c</fullName>
    <description>Copy of the HTML Template Id property from the Parent propertySet json</description>
    <label>HTML Template Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>