force-app/main/default/objects/ReportOSElement__c/fields/InvokeMode__c.field-meta.xml
<CustomField>
    <fullName>InvokeMode__c</fullName>
    <description>Copy of the Invoke Mode property from the Parent propertySet json</description>
    <label>Invoke Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>