force-app/main/default/objects/ReportOSElement__c/fields/LwcComponentOverride__c.field-meta.xml
<CustomField>
    <fullName>LwcComponentOverride__c</fullName>
    <description>Copy of the LWC Component Override property from the Parent propertySet json</description>
    <label>LWC Component Override</label>
    <length>100</length>
    <type>Text</type>
</CustomField>