force-app/main/default/objects/ReportOSElement__c/fields/ReportOmniScript__c.field-meta.xml
<CustomField>
    <fullName>ReportOmniScript__c</fullName>
    <description>Copy of the parent OmniScript</description>
    <label>Report OmniScript</label>
    <referenceTo>ReportOmniScript__c</referenceTo>
    <relationshipLabel>Report OmniScript Elements</relationshipLabel>
    <relationshipName>ReportOmniScriptElements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>