force-app/main/default/objects/ReportOSElement__c/fields/SendJSONPath__c.field-meta.xml
<CustomField>
    <fullName>SendJSONPath__c</fullName>
    <description>Copy of the Send JSON Path property from the Parent propertySet json</description>
    <label>Send JSON Path</label>
    <length>100</length>
    <type>Text</type>
</CustomField>