force-app/main/default/objects/ReportOSElement__c/fields/TrimmedJSON__c.field-meta.xml
<CustomField>
    <fullName>TrimmedJSON__c</fullName>
    <formula>IF(HasExtraPayload__c &amp;&amp; LEN(SendJSONPath__c) &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Trimmed JSON</label>
    <type>Checkbox</type>
</CustomField>