force-app/main/default/objects/ReportOSElement__c/fields/VlocityElement__c.field-meta.xml
<CustomField>
    <fullName>VlocityElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Actual OmniScript element</description>
    <label>Vlocity OmniScript Element</label>
    <referenceTo>vlocity_cmt__Element__c</referenceTo>
    <relationshipLabel>Report OmniScript Elements</relationshipLabel>
    <relationshipName>ReportOmniScriptElements</relationshipName>
    <type>Lookup</type>
</CustomField>